mysql-deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: mysql-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: mysql

  template:

    metadata:
      labels:
        app: mysql

    spec:
      containers:
        - name: mysql-container
          image: mysql:8.0

          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-pvc
